// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateCustomLogsYml should return a basic yml configuration 1`] = `
"outputs:
  default:
    type: elasticsearch
    hosts:
      - 'http://localhost:9200'
    api_key: 'elastic:changeme'
inputs:
  - id: my-logs-id
    type: logfile
    data_stream:
      namespace: default
    streams:
      - id: logs-onboarding-my-dataset
        data_stream:
          dataset: my-dataset
        paths:
          - /my-service.logs
"
`;

exports[`generateCustomLogsYml should return a yml configuration with customConfigurations 1`] = `
"outputs:
  default:
    type: elasticsearch
    hosts:
      - 'http://localhost:9200'
    api_key: 'elastic:changeme'
inputs:
  - id: my-logs-id
    type: logfile
    data_stream:
      namespace: default
    streams:
      - id: logs-onboarding-my-dataset
        data_stream:
          dataset: my-dataset
        paths:
          - /my-service.logs
agent.retry:
  enabled: true
  retriesCount: 3
agent.monitoring:
  metrics: false
"
`;

exports[`generateCustomLogsYml should return a yml configuration with multiple logFilePaths 1`] = `
"outputs:
  default:
    type: elasticsearch
    hosts:
      - 'http://localhost:9200'
    api_key: 'elastic:changeme'
inputs:
  - id: my-logs-id
    type: logfile
    data_stream:
      namespace: default
    streams:
      - id: logs-onboarding-my-dataset
        data_stream:
          dataset: my-dataset
        paths:
          - /my-service-1.logs
          - /my-service-2.logs
"
`;

exports[`generateCustomLogsYml should return a yml configuration with service name 1`] = `
"outputs:
  default:
    type: elasticsearch
    hosts:
      - 'http://localhost:9200'
    api_key: 'elastic:changeme'
inputs:
  - id: my-logs-id
    type: logfile
    data_stream:
      namespace: default
    streams:
      - id: logs-onboarding-my-dataset
        data_stream:
          dataset: my-dataset
        paths:
          - /my-service.logs
        processors:
          - add_fields:
              target: service
              fields:
                name: my-service
"
`;
